// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ImageThumbnails does not transform malicious URLs that contain cloudinary hostname in path/query 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-11wscb1"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-oegz0a"
      />
    </div>
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1vi207q"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageThumbnails matches snapshot with Cloudinary images (includes transformed URLs) 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-qutzxz"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1b0h1pr"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageThumbnails matches snapshot with custom maxImages 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1k9k1u6"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1kao8gg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageThumbnails matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1k9k1u6"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1kao8gg"
      />
    </div>
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1rjgnzl"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-13800m5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageThumbnails replaces existing Cloudinary transformations with optimized thumbnail transforms 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-z4f5u"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1b1epbr"
      />
    </div>
  </div>
</DocumentFragment>
`;
